<resources>
    <string name="app_name">PaTareas</string>
    <string name="nueva_tarea">Nueva Tarea</string>
    <string name="editar_tarea">Editar Tarea</string>
    <string name="titulo_tarea">Título</string>
    <string name="descripcion">Descripción</string>
    <string name="categoria">Categoría</string>
    <string name="prioridad">Prioridad</string>
    <string name="guardar">GUARDAR</string>
    <string name="eliminar">Eliminar</string>
    <string name="seleccionar_fecha">Seleccionar fecha</string>
    <string name="fecha">Seleccionar fecha</string>

</resources>